python refresher -2 added

--- a/Python Refresher-1.ipynb
+++ b/Python Refresher-1.ipynb
@@ -34,6 +34,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 'python'\n",
+    "it = iter(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<str_iterator at 0x7fd926469b50>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['p', 'y', 't', 'h', 'o', 'n']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 7, 8]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bubble_sort(arr):\n",
+    "    for j in range(len(arr)-1,-1,-1):\n",
+    "        for k in range(0,j):\n",
+    "            if(arr[k]>arr[k+1]):\n",
+    "                temp=arr[k]\n",
+    "                arr[k]=arr[k+1]\n",
+    "                arr[k+1]=temp\n",
+    "    return arr\n",
+    "bubble_sort([1,8,3,2,1,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -56,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 01:53:17) \n[Clang 12.0.0 ]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
